--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -9,11 +9,11 @@
     <div class='item-img-content'>
       <%= image_tag @item.image, class:"item-box-img" if @item.image.attached? %>
       <%# 商品が売れている場合は、sold outを表示しましょう %>
-      <%# if item.id == @item_id %>
+      <% if Purchase.where(item_id: @item.id).exists? %>
       <div class='sold-out'>
         <span>Sold Out!!</span>
       </div>
-      <%# end %>
+      <% end %>
       <%# //商品が売れている場合は、sold outを表示しましょう %>
     </div>
     <div class="item-price-box">
@@ -32,9 +32,9 @@
         <p class='or-text'>or</p>
         <%= link_to '削除', item_path(@item.id), method: :delete, class:'item-destroy' %>
       <% else %>
-        <%# 商品が売れていない場合はこちらを表示しましょう %>
+        <% unless Purchase.where(item_id: @item.id).exists? %>
         <%= link_to '購入画面に進む', item_purchases_path(@item.id), method: :get, class:"item-red-btn"%>
-        <%# //商品が売れていない場合はこちらを表示しましょう %>
+        <% end %>
       <% end %>
     <% end %>
 
