--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -133,7 +133,7 @@
               <%= image_tag item.image, class: "item-img" if item.image.attached? %>
 
               <%# sold outの条件分岐 %>
-              <% if @item.purchase.exists? %>
+              <% if item.purchase.present? %>
               <div class='sold-out'>
                 <span>Sold Out!!</span>
               </div>
