--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -5,6 +5,7 @@
   <div class="item-box">
     <h2 class="name">
       <%= @item.name %>
+      <%= @item.tag_name %>
     </h2>
     <div class='item-img-content'>
       <%= image_tag @item.image, class:"item-box-img" if @item.image.attached? %>
