--- a/app/assets/stylesheets/user/registration.css
+++ b/app/assets/stylesheets/user/registration.css
@@ -35,6 +35,14 @@
   padding-top: 20px;
 }
 
+.form-linkgroup {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  padding-top: 20px;
+}
+
 .form-group:first-child {
   padding: 0;
 }
@@ -49,6 +57,10 @@
   font-weight: bold;
 }
 
+.linkform-text {
+  font-size: 12px;
+}
+
 .input-default {
   width: 100%;
   margin-top: 5px;
@@ -60,6 +72,8 @@
   font-size: 16px;
   resize: none;
 }
+
+
 
 .info-text {
   color: #888;
